0.5.0
- Fix: Fixed incorrectly spelled "timeframe" (#187)
- Change: Added "number of seats" and "total price" on the "my-events" list (#491)
- Fix: Added some missing entries in the static template (#493)
- Feature: Extend the template helper class so that it also works in the BE (#523)
- Feature: Added flexform field to select a single event record (#514)
- Change: Show the total price for a registration on the confirmation page (#489)
- Change: BE: Organize the seminars form with tabs (#515)
- Change: In the registration form, split the field "billing address" (#488)
- Fix: Event registration is stuck when payment methods are not shown (#508)
- Change: Hide the column "list of registrations" in the list of events for a certain topic (#482)
- Change: Made the date field linked in the list view (#481)
- Fix: Registration is stuck for events without any payment methods (#498)
- Change: In the redirect after registering for an event, include the seminar number as URL parameter (#487)
- Change: Show the register/login column in the list view even when no user is logged in (#485)
- Change: In the registration form, pre-fill the number of seats with 1 (#490)
- Change: In the registration form, pre-fill the account owner field with the FE user's name (#486)
- Feature: Add fields for bank data (#464)
- Feature: Allow to have a separate page for the detailed view of events (#468)
- Feature: Added a field for "times and places" to the event record (#381)
- Feature: In the details view, show events starting the next day (#379)
- Change: Make the names of the attendees required if more than one seat is reserved (#472)
- Feature: List view of all topics (#300)
- Feature: Added default VIPs that are able to see all registrations on all events (#437, #477)
- Feature: List other dates for the same event topic (#299)
- Fix: SQL Errors in the registration form (#473)
- Change: Make choice of payment method obligatory in the registration form (#471)