@@ -13,6 +13,13 @@
 			<label index="subModuleTitle_registrations">Registrations</label>
 			<label index="subModuleTitle_events">Events</label>
 			<label index="notYetImplementedSubModule">This sub module is not implemented yet.</label>
+			<label index="eventlist.date">Date</label>
+			<label index="eventlist.title">Title</label>
+			<label index="eventlist.attendees">Cur.</label>
+			<label index="eventlist.attendees_min">Min.</label>
+			<label index="eventlist.attendees_max">Max.</label>
+			<label index="eventlist.enough_attendees">Enough</label>
+			<label index="eventlist.is_full">Full</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="title">Arrangementer</label>
@@ -25,6 +32,13 @@
 			<label index="subModuleTitle_registrations">Anmeldungen</label>
 			<label index="subModuleTitle_events">Veranstaltungen</label>
 			<label index="notYetImplementedSubModule">Dieses Submodul ist noch nicht implementiert.</label>
+			<label index="eventlist.date">Datum</label>
+			<label index="eventlist.title">Titel</label>
+			<label index="eventlist.attendees">Akt.</label>
+			<label index="eventlist.attendees_min">Min.</label>
+			<label index="eventlist.attendees_max">Max.</label>
+			<label index="eventlist.enough_attendees">Genug</label>
+			<label index="eventlist.is_full">Voll</label>
 		</languageKey>
 		<languageKey index="no" type="array">
 		</languageKey>
@@ -113,6 +127,13 @@
 			<label index="subModuleTitle_registrations" type="integer">170423130</label>
 			<label index="subModuleTitle_events" type="integer">142581619</label>
 			<label index="notYetImplementedSubModule" type="integer">127965110</label>
+			<label index="eventlist.date" type="integer">71780721</label>
+			<label index="eventlist.title" type="integer">192455458</label>
+			<label index="eventlist.attendees" type="integer">95736411</label>
+			<label index="eventlist.attendees_min" type="integer">51517544</label>
+			<label index="eventlist.attendees_max" type="integer">244016059</label>
+			<label index="eventlist.enough_attendees" type="integer">30455057</label>
+			<label index="eventlist.is_full" type="integer">196953872</label>
 		</languageKey>
 		<languageKey index="no" type="array">
 		</languageKey>
@@ -201,6 +222,13 @@
 			<label index="subModuleTitle_registrations">Registrations</label>
 			<label index="subModuleTitle_events">Events</label>
 			<label index="notYetImplementedSubModule">This sub module is not implemented yet.</label>
+			<label index="eventlist.date">Date</label>
+			<label index="eventlist.title">Title</label>
+			<label index="eventlist.attendees">Cur.</label>
+			<label index="eventlist.attendees_min">Min.</label>
+			<label index="eventlist.attendees_max">Max.</label>
+			<label index="eventlist.enough_attendees">Enough</label>
+			<label index="eventlist.is_full">Full</label>
 		</languageKey>
 	</orig_text>
 </T3locallang>
